--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>⚡️ HackTool Pro - جهازك تحت السيطرة ⚡️</title>
+
 <style>
   body {
     background: #000;
@@ -132,7 +133,7 @@
 <body>
 
 <h1>⚡️ HackTool Pro - جهازك تحت السيطرة ⚡️</h1>
-
+<h1>لا تحاول الخروج خروجك يعني ضخ الف فايروس بالجهاز</h1>
 <button id="startBtn">ابدأ فحص الجهاز</button>
 
 <div id="output">اضغط "ابدأ فحص الجهاز" لبدء العملية...</div>
