--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     
 btn.onclick = () => {
   alert("⚠️ تم التسريب! لا تحاول التراجع 😈");
-  window.location.href = "New Folder/indbex.html";
+  window.location.href = "indbex.html";
 };
 }
   document.getElementById('startBtn').addEventListener('click', hackSequence);
